--- a/src/rattingadvisor/AlertWindow.form
+++ b/src/rattingadvisor/AlertWindow.form
@@ -164,6 +164,9 @@
         <Property name="text" type="java.lang.String" resourceKey="acceptButton.text"/>
         <Property name="name" type="java.lang.String" value="acceptButton" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="acceptButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
